# csp-check

./: .gitignore  README.md  pyproject.toml  ruff.toml  test_urls.txt  test_urls_mixed.txt  test_urls_no_csp.txt  test_urls_one_csp.txt
csp_check/: csp_check.py
tests/: test_behavior_complex.py  test_behavior_simple.py  test_hightlight_csp_problems.py  test_output_produced.py
